templates/hipster-ingress-template.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hipster-ingress
  namespace: hipster-demo
  annotations:
    kubernetes.io/ingress.allow-http: "false"
    #ingress.gcp.kubernetes.io/pre-shared-cert: hipsterexternal-tls
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
    - host: hipster.${fqdn}
      http:
        paths:
        - backend:
            serviceName: frontend
            servicePort: 80
  tls:
   - hosts:
     - hipster.${fqdn}
     secretName: hipster-tls-secret
